--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "express": "^4.17.1",
     "readline-sync": "^1.4.10",
     "youtube-dl": "^3.0.2"
   }
